@@ -10,6 +10,8 @@ Version 1.4.4 (??/??/??) "Wiggles"
     should now appear above the graph without writing over the top of it.
   * Save files are now saved to a temporary file first and then copied to the final specified file name. If there is
     an editor crash whilst saving, only the temporary file will be corrupted.
+  * Fixed a bug where saving a specification with a task that has a single flow coming into or going out of it, then
+    reloading the specification ses the user unable to add a decorator for that flow.
 
 Version 1.4.3 (25/08/2006) "Deltapoint"
   * There is now a new palette menu item allowing users to drag the visible window of a 
